--- a/front/src/Scenes/GameRoom/GamePlace/CurrentUserGamePlace/scss/index.scss
+++ b/front/src/Scenes/GameRoom/GamePlace/CurrentUserGamePlace/scss/index.scss
@@ -1,7 +1,8 @@
-.control_btns{
+.control_btns {
     text-align: center;
 }
-.generate_card_btn{
+
+.generate_card_btn {
     font-size: 30px;
     width: 40px;
     height: 40px;
@@ -12,23 +13,35 @@
     box-shadow: 0px 1px 9px 0px #e44145;
     margin: 5px;
 }
-.decline{
+
+.decline {
     background: #e44145;
     box-shadow: 0px 1px 9px 0px #e44145;
 }
-.accept{
+
+.accept {
     background: green;
     box-shadow: 0px 1px 9px 0px green;
 }
 
-.username{
+.username {
     text-align: center;
     margin: 0;
 }
 
-.userPlace{
+.userPlace {
     border: 1px solid black;
     background: white;
     border-radius: 11px;
     padding: 15px;
+}
+
+.vericleMiddle {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.userPlaceWrapper {
+    display: table;
+    min-height: 200px;
 }
